# SockeSole

./: README.md  pyproject.toml
.github/workflows/: code-style-check-workflow-call.yaml  pytest-workflow-call.yaml  static-type-check-workflow-call.yaml
sockesole/: __init__.py
tests/: test_base.py  test_client.py  test_integration.py  test_server.py  test_socket_console.py  test_utils.py
