[project]
name = "sockesole"
version = "0.0.0a0"
description = "a python library which provides you an interface like input/print."
readme = "README.md"
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = [
    "autopep8>=2.3.1",
    "flake8>=7.1.1",
    "mypy>=1.11.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--cov=sockesole --cov-report=term-missing --cov-report=xml"
markers = ["integration: mark a test as an integration test"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
